# Mai

./: .dockerignore  .gitignore  .markdownlint.json  .pre-commit-config.yaml  404.html  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SUMMARY.md  docker-compose.yml  help_command.py  index.html  launcher.py  mai.bat  mai.py  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.github/: CODEOWNERS  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: lock.yml
api/: .dockerignore  Dockerfile
assets/: json.py
bot/: .dockerignore  .gitignore  Pipfile  README.md  help_command.py  launcher.py  mai.bat  mai.ini  mai.py  mai.sh  pyproject.toml  requirements-dev.txt  requirements.txt
bot/api/: server.py
bot/api/app/: server.py
bot/assets/: README.md  actions.json  json.py
bot/cogs/AFK/: AFK.py
bot/cogs/Anilist/: Anilist.py
bot/cogs/Automod/: Automod.py
bot/cogs/Captcha/: Captcha.py
bot/cogs/CoD/: CoD.py
bot/cogs/Counting/: Counting.py
bot/cogs/Developer/: Developer.py
bot/cogs/Economy/: Economy.py
bot/cogs/Emoji/: Emoji.py
bot/cogs/Fun/: Actions.py  Fun.py
bot/cogs/Genshin Impact/: Genshin.py
bot/cogs/Giveaways/: Giveaways.py
bot/cogs/ImageUtils/: Images.py
bot/cogs/Invites/: Invites.py
bot/cogs/Leveling/: Leveling.py
bot/cogs/Logging/: Logging.py
bot/cogs/MAL/: MAL.py
bot/cogs/Mai/: ChangeLogPoster.py  ErrorHandler.py  Events.py  FlagHandler.py  Report.py  StatCord.py  TopGG.py
bot/cogs/Minecraft/: Minecraft.py
bot/cogs/Misc/: Misc.py
bot/cogs/Moderation/: Moderation.py
bot/cogs/Modmail/: Modmail.py
bot/cogs/Music/: Music.py
bot/cogs/NSFW/: NSFW.py
bot/cogs/Osu/: Osu.py
bot/cogs/Polls/: Polls.py
bot/cogs/Reaction Roles/: Reaction Roles.py
bot/cogs/Roblox/: Roblox.py
bot/cogs/Server/: Server.py
bot/cogs/Snipes/: Snipes.py
bot/cogs/Spotify/: Spotify.py
bot/cogs/Suggestions/: Suggestions.py
bot/cogs/Tags/: Tags.py
bot/cogs/Tickets/: Tickets.py
bot/cogs/Uploads/: Instagram.py  TikTok.py  Twitch.py  Twitter.py  Uploads.py  Youtube.py
bot/cogs/Warns/: Warns.py
bot/cogs/Welcome/: Welcome.py
bot/config/: README.md  example.config.yaml
bot/config/ext/: config_parser.py  parser.py
bot/db/: README.md  models.py
bot/db/tortoise/config/: tortoise_config.py
bot/docs/: missing-translation.md  mkdocs.yml
bot/docs/de/: mkdocs.yml
bot/docs/docs/: index.md
bot/docs/en/: mkdocs.yml
bot/docs/en/data/: premium_users.yml
bot/docs/es/: mkdocs.yml
bot/docs/ja/: mkdocs.yml
bot/helpers/: ASCII.py  README.md  console.py  constants.py  formatting.py  logging.py  utils.py
bot/helpers/cache/: reddit.py
bot/locales/: README.md  languages.py
bot/scripts/: README.md  script_manager.py
bot/scripts/docs/: build.py
bot/scripts/linux/: build_database.sh  rebuild_database.sh  update_requirements.sh  update_requirements_dev.sh  upgrade_database.sh
bot/scripts/win32/: build_database.bat  rebuild_database.bat  update_requirements.bat  update_requirements_dev.bat  upgrade_database.bat
bot/views/: README.md
cogs/AFK/: AFK.py
cogs/Anilist/: Anilist.py
cogs/Auto Responses/: Auto Responses.py
cogs/Automod/: Automod.py
cogs/Captcha/: Captcha.py
cogs/Developer/: Developer.py
cogs/Economy/: Economy.py
cogs/Emoji/: Emoji.py
cogs/Fun/: Fun.py
cogs/Genshin Impact/: Genshin.py
cogs/Giveaways/: Giveaways.py
cogs/ImageUtils/: Images.py
cogs/Invites/: Invites.py
cogs/Leveling/: Leveling.py
cogs/Logging/: Logging.py
cogs/MAL/: MAL.py
cogs/Misc/: Misc.py
cogs/Moderation/: Moderation.py
cogs/Music/: Music.py
cogs/NSFW/: NSFW.py
cogs/Osu/: Osu.py
cogs/Polls/: Polls.py
cogs/Reaction Roles/: Reaction Roles.py
cogs/Server/: Server.py
cogs/Snipes/: Snipes.py
cogs/Suggestions/: Suggestions.py
cogs/Tickets/: Tickets.py
cogs/Uploads/: Uploads.py
cogs/Warns/: Warns.py
cogs/Welcome/: Welcome.py
config/: example.config.yaml
config/ext/: config_parser.py
db/: models.py
db/tortoise/config/: default.py
docs/fr/: mkdocs.yml
docs/ko/: mkdocs.yml
docs/ru/: mkdocs.yml
docs/tr/: mkdocs.yml
helpers/: ASCII.py  constants.py  exceptions.py  formatting.py  logging.py  utils.py
locales/: languages.py
locales/de_DE/: de.json
locales/ja_JP/: ja.json
locales/ko_KO/: ko.json
locales/tr_TR/: tr.json
scripts/: build_database.bat  format_bot.bat  rebuild_database.bat  script_manager.bat  script_manager.sh  upgrade_database.bat
scripts/linux/: build_database.sh  rebuild_database.sh  upgrade_database.sh
scripts/win32/: build_database.bat  rebuild_database.bat  upgrade_database.bat
search/: search_index.json
utils/: ASCII.py  constants.py  exceptions.py  logging.py
website/backend/: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  main.py  pyproject.toml  requirements.txt  run_backend.bat
website/backend/config/: example.config.yaml
website/backend/config/ext/: parser.py
website/backend/events/: handlers.py
website/backend/exceptions/: exceptions.py
website/backend/helpers/: classes.py  logging.py
website/backend/models/: schemas.py
website/backend/scripts/: run.sh  setup.sh
website/frontend/: .dockerignore  DockerFile  README.md  package.json
website/frontend/src/config/: index.tsx
