[tool.poetry]
name = "mai-backend"
version = "0.1.0"
description = "Backend Of Mai"
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0 License"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.68.0"
fastapi-discord = "^0.2.0"

[tool.poetry.dev-dependencies]
PyYAML = "^6.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
