[tool.poetry]
name = "mai-backend"
version = "0.1.0"
description = "Backend Of Mai"
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0 License"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.70.0"
ujson = "^4.2.0"
itsdangerous = "^2.0.1"
fastapi-cache2 = {extras = ["redis"], version = "^0.1.7"}
fastapi-events = "^0.2.1"
fastapi-mail = {git = "https://github.com/sabuhish/fastapi-mail.git"}
fastapi-limiter = {git = "https://github.com/long2ice/fastapi-limiter.git"}
starlette-discord = {git = "https://github.com/nwunderly/starlette-discord.git"}


[tool.poetry.dev-dependencies]
PyYAML = "^6.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
rich = "^10.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
